--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.5.3"
+    "react-hook-form": "^7.50.1",
+    "react-intersection-observer": "^9.5.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
