--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
     "yup": "^1.3.3"
   },
