--- a/package.json
+++ b/package.json
@@ -13,14 +13,10 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
-    "react-hot-toast": "^2.4.1",
-    "react-intersection-observer": "^9.5.3",
-    "yup": "^1.3.3"
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@types/mailchimp__mailchimp_marketing": "^3.0.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
