--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@tailwindcss/typography": "^0.5.16",
     "gray-matter": "^4.0.3",
-    "next": "14.0.4",
+    "next": "^14.2.32",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.5.3",
